# aqd

./: Cargo.toml  Caveats.md  README.md
.github/workflows/: build.yml  test.yml
aqd-core/: Cargo.toml
aqd-polkadot/: Cargo.toml
aqd-polkadot/src/: lib.rs
aqd-polkadot/src/commands/: call.rs  instantiate.rs  mod.rs  remove.rs  upload.rs
aqd-solana/: Cargo.toml
aqd-solana/src/: deploy.rs  lib.rs
aqd-solana/src/commands/: call.rs  deploy.rs
aqd-utils/: Cargo.toml
aqd-utils/src/: lib.rs  utils.rs
crates/aqd-core/: Cargo.toml
crates/aqd-core/src/: cli.rs  main.rs
crates/aqd-core/src/subcommands/: mod.rs  solana.rs
crates/aqd-polkadot/: Cargo.toml
crates/aqd-solana/: Cargo.toml
crates/aqd-solana/src/: lib.rs  solana_action.rs
crates/aqd-solana/src/commands/: call.rs  deploy.rs  mod.rs  show.rs
crates/aqd-utils/: Cargo.toml
crates/aqd-utils/src/: lib.rs
crates/solana-contracts/: Cargo.toml  README.md
crates/solana-contracts/examples/: flipper_call.rs
crates/solana-contracts/src/: lib.rs  solana_call.rs  solana_deploy.rs
integration/solana/: solana_cli.sh
solana-contracts/: Cargo.toml
solana-contracts/examples/: flipper_call.rs
solana-contracts/src/: borsh_encoding.rs  lib.rs  printing_utils.rs  solana_call.rs  utils.rs
solana-contracts/tests/: test_address.rs  test_arrays.rs  test_defined_types.rs  test_flipper.rs  test_int.rs
