[package]
name = "solana-contracts"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
colored = "2.0.4"

# Solana and Anchor Dependencies
solana-clap-v3-utils = "1.16.14"
solana-cli-config = "1.16.14"
solana-client = "1.16.14"
solana-transaction-status = "1.16.14"
solana-sdk = "1.16.14"
solana-cli = "1.16.13"
solana-cli-output = "1.16.13"
solana-rpc-client-api = "1.16.13"
anchor-syn = { version = "0.28.0", features = ["idl"] }

# Numeric Types and Encoding
convert_case = "0.6.0"
sha2 = "0.10.8"
num-bigint = { version = "0.4", features = ["rand", "serde"]}
num-traits = "0.2"
base64 = "0.21.4"
base58 = "0.2.0"
hex = "0.4.3"
byte-slice-cast = "1.2.2"
